test/org/midica/testfiles/failing/compact-channel-var-undef.midica
INCLUDE inc/instruments.midica

VAR $x = test

$y: c:/4
